fix mobile nav bar spacing

--- a/src/MainContainer/MainContainer.scss
+++ b/src/MainContainer/MainContainer.scss
@@ -102,13 +102,12 @@
       }
 
       .drawer-nav-list {
-        margin-top: 1rem;
         display: flex;
         align-items: center;
         flex-direction: column;
 
         .nav-item {
-          margin-bottom: 1.5rem;
+          margin-bottom: 1rem;
 
           .nav-link {
             font-size: 2rem;
